Implemented update download variant endpoint
